@@ -55,6 +55,7 @@ Release 0.2.1 - Unreleased
                the region location cache
    HBASE-864   Deadlock in regionserver
    HBASE-865   Fix javadoc warnings (Rong-En Fan via Jim Kellerman)
+   HBASE-872   Getting exceptions in shell when creating/disabling tables
 
   IMPROVEMENTS
    HBASE-801  When a table haven't disable, shell could response in a "user
